# sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  pytest.ini  render.yaml  requirements-anthropic.txt  requirements-cloud.txt  requirements.txt  sentinel.example.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-frontend.yml
docker/: Dockerfile.sandbox  Dockerfile.sentinel  docker-compose.yml  empty_requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CodeBlock.tsx  CopyButton.tsx  Footer.tsx  Navbar.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Agents.tsx  Commands.tsx  Dashboard.tsx  Docs.tsx  Home.tsx
src/: main.py
src/agents/: orchestrator.py  risk_scorer.py
src/agents/bug_squad/: fix_proposer_agent.py  reproduction_agent.py  root_cause_agent.py  verification_agent.py
src/agents/review_swarm/: architecture_agent.py  lead_reviewer.py  performance_agent.py  security_agent.py  style_agent.py
src/agents/self_healing/: consistency.py  consolidation.py  curator.py  drift_checker.py  pattern_detector.py
src/agents/test_swarm/: coverage_agent.py  integration_test_agent.py  module_test_agent.py
src/agents/trust_layer/: approval_gate.py  explainability_agent.py  rollback_agent.py
src/api/: management.py  store.py  webhook.py
src/cli/: display.py
src/core/: config.py  llm.py  logging.py  pipeline.py  policy.py  project_utils.py  regression_detector.py  sandbox.py  state.py  token_tracker.py
src/integrations/: git_utils.py  github_client.py
src/knowledge_base/: embedder.py  models.py  store.py
src/scheduler/: maintenance.py
test_targets/: buggy_app.py  buggy_app.ts  buggy_calculator.py  test_buggy_calculator.py
tests/: conftest.py  test_approval_gate.py  test_kb.py  test_pipeline.py  test_policy.py  test_regression_detector.py  test_risk_scorer.py  test_self_healing.py
