[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zendev-sentinel"
version = "0.1.3"
description = "Self-healing multi-agent code quality pipeline"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.11"
authors = [{ name = "Devejya Pandey", email = "devejya56@gmail.com" }]
keywords = ["code-review", "ai", "agents", "static-analysis", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # ── Core orchestration ────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    # ── LLM providers (at least one required) ────────────────────────────────
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "huggingface_hub>=0.24.0",
    "langchain-ollama>=0.2.0",
    # ── Knowledge base ────────────────────────────────────────────────────────
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0",
    # ── API / web ─────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    # ── GitHub integration ────────────────────────────────────────────────────
    "PyGithub>=2.4.0",
    "gitpython>=3.1.43",
    # ── Scheduling ────────────────────────────────────────────────────────────
    "apscheduler>=3.10.4",
    # ── Docker sandbox ────────────────────────────────────────────────────────
    "docker>=7.1.0",
    # ── Data / validation ─────────────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # ── Security ──────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # ── Logging / observability ───────────────────────────────────────────────
    "structlog>=24.4.0",
    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0", "anthropic>=0.40.0"]
tunnel = ["pyngrok>=7.0.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]

[project.scripts]
sentinel = "src.main:main"

[project.urls]
Homepage = "https://github.com/ZenDev-arc/sentinel"
Issues = "https://github.com/ZenDev-arc/sentinel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md"]
